--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -38,7 +38,7 @@
          padding-left: 10px
       &_link
          font-size: 12px
-         
+
    .subheader
       &_logo
          img
@@ -164,3 +164,7 @@
          margin-top: 10px
       &_block
          margin: 15px 0
+
+@media (max-width: 375px)
+   .footer_links
+      max-width: 100%
